tests/reference/asr-string_slice2-473fb60.stderr
semantic error: Substring end index exceeds the string length
 --> tests/errors/string_slice2.f90:6:12
  |
6 |    print*, s(1: 9)
  |            ^^^^^^^ 
